test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET__api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Wed, 28 May 2025 05:07:33 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="u5btH+TLMC3xmX/52n9o4TOOf4KYJKdq", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}